--- a/src/pages/KanaQuiz.css
+++ b/src/pages/KanaQuiz.css
@@ -1,6 +1,12 @@
 .quiz-container {
   padding: 2rem;
   text-align: center;
+  min-height: 100vh;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  overflow: hidden;
 }
 
 .question-display {
