--- a/src/pages/KanaQuiz.css
+++ b/src/pages/KanaQuiz.css
@@ -23,8 +23,8 @@
 .letter-row {
   display: flex;
   justify-content: center;
-  margin-bottom: 0.5rem;
   flex-wrap: wrap;
+  margin-top: 0.5rem;
 }
 
 .round-button {
@@ -76,7 +76,7 @@
 }
 
 .repeat-select {
-  margin: 1rem 0;
+  margin-top: 1.5rem;
   font-size: 1rem;
   display: flex;
   align-items: center;
@@ -106,8 +106,11 @@
 
 .section-label {
   font-size: 1rem;
-  margin-bottom: 0.5rem;
   text-align: center;
   color: #ffffff;
   font-weight: normal;
+}
+
+.repeat-select + .button-primary {
+  margin-top: 1.5rem;
 }
