--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   background-color: #006064;
-  color: white;
+  color: #ffffff;
   padding: 0.5rem 1rem;
   z-index: 1000;
 }
@@ -18,7 +18,7 @@
 }
 
 .app-header a {
-  color: white;
+  color: #ffffff;
   text-decoration: none;
   font-weight: bold;
 }
@@ -32,7 +32,7 @@
 }
 
 .nav-link {
-  color: white;
+  color: #ffffff;
   font-weight: bold;
   text-decoration: none;
   padding: 0.3rem 0.5rem;
