--- a/src/pages/KanaQuiz.css
+++ b/src/pages/KanaQuiz.css
@@ -10,10 +10,10 @@
   overflow: hidden;
 }
 
-.question-display {
+/* .question-display {
   font-size: 3rem;
   margin: 1.5rem 0;
-}
+} */
 
 .morse-display {
   color: #fff;
