--- a/src/pages/Settings.css
+++ b/src/pages/Settings.css
@@ -10,19 +10,22 @@
     font-size: 1.1rem;
 }
 
-.settings-section label {
+/* .settings-section label {
     display: block;
     margin-bottom: 0.5rem;
-}
+} */
 
 .settings-section input[type="range"] {
     width: 100%;
-    margin-top: 0.5rem;
+    margin-top: 1rem;
 }
 
 .settings-section span {
-    display: block;
-    margin-top: 0.5rem;
     font-weight: bold;
     color: #ffffff;
+}
+
+.wpm-wrap {
+    display: flex;
+    align-items: center;
 }
