--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   padding: 2rem;
   text-align: center;
   background-color: #00acc1;
-  min-height: 100vh;
+  /* min-height: 100vh; */
   color: #ffffff;
   font-family: 'Arial', sans-serif;
 }
