--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   align-items: center;
   overflow: hidden;
-  min-height: 100vh;
+  /* min-height: 100vh; */
   justify-content: flex-start;
   gap: 1.5rem;
 }
