--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,17 @@
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+
 .container {
   padding: 2rem;
   text-align: center;
