--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,17 @@
-html,
+/* html,
 body {
   height: 100%;
   margin: 0;
   padding: 0;
   overflow: hidden;
+} */
+
+html,
+body,
+#root {
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 body {
