--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -1,22 +1,14 @@
-/* :root {
-  --vh: 1vh;
-}
-
-@media (max-width: 600px) {
-  :root {
-    --vh: 1vh;
-  }
-} */
-
 .quiz-container {
-  /* height: calc(var(--vh, 1vh) * 100); */
+  min-height: 100vh;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
   align-items: center;
-  overflow: hidden;
+  overflow-y: auto;
   justify-content: flex-start;
   gap: 1.5rem;
+  padding-bottom: 4rem;
+  justify-content: center;
 }
 
 .text-input {
