--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -1,11 +1,11 @@
 .quiz-container {
-  min-height: 100vh;
+  /* min-height: 100vh; */
+  height: calc(var(--vh) * 100);
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
   align-items: center;
   overflow-y: auto;
-  justify-content: flex-start;
   gap: 1.5rem;
   padding-bottom: 4rem;
   justify-content: center;
