--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -1,6 +1,6 @@
 .quiz-container {
   min-height: 100vh;
-  padding-top: 6rem;
+  padding-top: 10rem;
   /* 画面中央〜下寄りに寄せたい位置 */
   padding-bottom: 5rem;
   /* キーボードやタブバーがかぶらないように余裕 */
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   overflow-y: auto;
 }
 
