--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,11 @@
 html,
-body,
-#root {
+body {
   height: 100%;
   margin: 0;
   padding: 0;
+  overscroll-behavior: none;
+  overflow: hidden;
+  touch-action: none;
 }
 
 body {
