--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -1,6 +1,6 @@
 .quiz-container {
   min-height: 100vh;
-  /* padding-top: 6rem; */
+  padding-top: 3rem;
   padding-bottom: 5rem;
   box-sizing: border-box;
   display: flex;
