--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -9,6 +9,10 @@
   z-index: 1000;
 }
 
+.app-header nav {
+  position: relative;
+}
+
 .app-header ul {
   list-style: none;
   display: flex;
@@ -41,4 +45,18 @@
 .app-header li a.active {
   border-bottom: 2px solid #ffface;
   padding-bottom: 2px;
+}
+
+.version-badge {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 1rem;
+  font-size: 1rem;
+  color: #965353;
+  padding: 0.2rem 0.8rem;
+  padding-right: 1rem;
+  border-radius: 9999px;
+  font-weight: bold;
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.05);
 }
