--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -54,7 +54,7 @@
   right: 1rem;
   font-size: 1rem;
   /* color: #965353; */
-  color: red;
+  color: blue;
   padding: 0.2rem 0.8rem;
   padding-right: 1rem;
   border-radius: 9999px;
