--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -53,8 +53,7 @@
   bottom: 0;
   right: 1rem;
   font-size: 1rem;
-  /* color: #965353; */
-  color: blue;
+  color: #965353;
   padding: 0.2rem 0.8rem;
   padding-right: 1rem;
   border-radius: 9999px;
